[tool.poetry]
name = "ctc"
version = "0.1.0"
description = ""
authors = ["Jens Christian Hillerup <jc@optikosprime.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ortools = "^9.7.2996"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
